Add search component

--- a/snueue/assets/scss/app.scss
+++ b/snueue/assets/scss/app.scss
@@ -63,10 +63,7 @@ body {
   margin-top: 3rem;
 }
 
-.search .search-bar {
-}
-
-.search .results-order-select {
+#search-form .results-sorting-select {
   height: 3.0625rem;
 }
 
