Complete front end and backend player integration

--- a/snueue/assets/scss/app.scss
+++ b/snueue/assets/scss/app.scss
@@ -59,11 +59,11 @@ body {
   background: #151515;
 }
 
-#yield {
+#main {
   margin-top: 3rem;
 }
 
-#search-form .results-sorting-select {
+.search-form .results-sorting-select {
   height: 3.0625rem;
 }
 
