--- a/snueue/templates/index.html
+++ b/snueue/templates/index.html
@@ -1,28 +1,8 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
-  <div id="yield">
-    <div id="search">
-    </div>
-    <div id="queue">
-      <div class="media-item">
-        <div class="row">
-          <div class="small-8 large-offset-2 columns">
-            <h4 class="media-title">1 - Rick Astley - Never Gonna Give You Up <i class="fa fa-chevron-down right"></i></h4>
-            <div class="media-player row">
-              <div class="small-12 columns">
-                <div class="flex-video">
-                  <iframe width="420" height="315" src="//www.youtube.com/embed/dQw4w9WgXcQ" frameborder="0" allowfullscreen></iframe>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="small-1 columns end">
-            <div class="button secondary"><i class="fa fa-play"></i></div>
-            <div class="button secondary"><i class="fa fa-forward"></i></div>
-          </div>
-        </div>
-      </div>
+  <div id="container">
+    <div id="main">
+      
     </div>
   </div>
-
 {% endblock %}
