--- a/snueue/templates/layouts/javascripts.html
+++ b/snueue/templates/layouts/javascripts.html
@@ -1,7 +1,8 @@
 <script src="{{ url_for('static', filename='javascripts/vendor/modernizr.js') }}"></script>
 <script src="{{ url_for('static', filename='javascripts/vendor/jquery.js') }}"></script>
 <script src="{{ url_for('static', filename='javascripts/vendor/react/react.js') }}"></script>
+<script src="//www.youtube.com/player_api"></script>
 {% if config.DEBUG %}
   <script src="{{ url_for('static', filename='javascripts/vendor/react/JSXTransformer.js') }}"></script>
-  <script type="text/jsx" src="{{ url_for('static', filename='jsx/search.jsx') }}"></script>
+  <script type="text/jsx" src="{{ url_for('static', filename='jsx/queue.jsx') }}"></script>
 {% endif %}
