--- a/snueue/assets/scss/_settings.scss
+++ b/snueue/assets/scss/_settings.scss
@@ -629,12 +629,12 @@ $secondary-color: #303030;
 // $input-focus-bg-color: scale-color($white, $lightness: -2%);
 // $input-border-color: scale-color($white, $lightness: -20%);
 // $input-focus-border-color: scale-color($white, $lightness: -40%);
-// $input-border-style: solid;
-// $input-border-width: 1px;
+$input-border-style: solid;
+$input-border-width: 0px;
 // $input-border-radius: $global-radius;
 // $input-disabled-bg: $gainsboro;
 // $input-disabled-cursor: $cursor-default-value;
-// $input-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+$input-box-shadow: inset 0px 0px 2px #bababa;
 
 // We use these to style the fieldset border and spacing.
 // $fieldset-border-style: solid;
