--- a/snueue/assets/stylesheets/app.css
+++ b/snueue/assets/stylesheets/app.css
@@ -64,7 +64,7 @@ body {
   color: #222;
   padding: 0;
   margin: 0;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   line-height: 1.5;
@@ -1615,7 +1615,7 @@ select {
   color: #222222;
   padding: 1rem;
   display: block;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1rem;
 }
 /* line 143, ../scss/vendor/foundation/foundation/components/_accordion.scss */
@@ -2321,7 +2321,7 @@ button, .button {
   border-style: solid;
   border-width: 0px;
   cursor: pointer;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   line-height: normal;
   margin: 0 0 1.25rem;
@@ -4881,7 +4881,7 @@ kbd {
 /* line 91, ../scss/vendor/foundation/foundation/components/_labels.scss */
 .label {
   font-weight: normal;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   text-align: center;
   text-decoration: none;
   line-height: 1;
@@ -5448,7 +5448,7 @@ ul.pagination li {
   color: #EEEEEE;
   font-weight: normal;
   font-size: 1rem;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 }
 /* line 143, ../scss/vendor/foundation/foundation/components/_pricing-tables.scss */
 .pricing-table .price {
@@ -5458,7 +5458,7 @@ ul.pagination li {
   color: #333333;
   font-weight: normal;
   font-size: 2rem;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 }
 /* line 144, ../scss/vendor/foundation/foundation/components/_pricing-tables.scss */
 .pricing-table .description {
@@ -5842,7 +5842,7 @@ dialog[open] {
   padding: 0.875rem 0;
   list-style-type: none;
   list-style-position: outside;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 }
 /* line 70, ../scss/vendor/foundation/foundation/components/_side-nav.scss */
 .side-nav li {
@@ -5866,7 +5866,7 @@ dialog[open] {
 .side-nav li.active > a:first-child:not(.button) {
   color: #ff7d4d;
   font-weight: normal;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 }
 /* line 93, ../scss/vendor/foundation/foundation/components/_side-nav.scss */
 .side-nav li.divider {
@@ -6038,7 +6038,7 @@ dialog[open] {
   display: inline;
   margin-left: 1rem;
   margin-bottom: 0.625rem;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   font-size: 0.875rem;
   color: #999999;
@@ -6579,7 +6579,7 @@ p aside {
 /* Default header styles */
 /* line 252, ../scss/vendor/foundation/foundation/components/_type.scss */
 h1, h2, h3, h4, h5, h6 {
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-weight: normal;
   font-style: normal;
   color: #222222;
@@ -7004,7 +7004,7 @@ blockquote p {
   background-color: #EFEFEF;
   color: #222222;
   padding: 1rem 2rem;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 1rem;
 }
 /* line 49, ../scss/vendor/foundation/foundation/components/_tabs.scss */
@@ -7442,7 +7442,7 @@ meta.foundation-mq-topbar {
   color: #FFFFFF;
   padding: 12px 0 12px 0;
   padding-left: 15px;
-  font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+  font-family: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
   font-size: 0.8125rem;
   font-weight: normal;
   text-transform: none;
@@ -9035,34 +9035,37 @@ body {
   margin-top: 3rem;
 }
 
-/* line 66, ../scss/app.scss */
-.search-form .results-sorting-select {
-  height: 3.0625rem;
+/* line 67, ../scss/app.scss */
+.search-form .search-bar, .search-form .results-sorting-select {
+  height: 3.3625rem;
 }
 
-/* line 70, ../scss/app.scss */
+/* line 73, ../scss/app.scss */
 .media-item .media-title {
   color: #ffffff;
 }
-
-/* line 74, ../scss/app.scss */
+/* line 77, ../scss/app.scss */
 .media-item .media-expand {
   background: #151515;
 }
-
-/* line 78, ../scss/app.scss */
+/* line 81, ../scss/app.scss */
 .media-item .fa {
   color: #ffffff;
 }
-
-/* line 82, ../scss/app.scss */
+/* line 85, ../scss/app.scss */
 .media-item .media-title {
   background: #303030;
-  padding: 0.58rem 0.7rem;
+  padding: 0.68rem 0.7rem;
   margin: 0;
+  font-weight: 300;
+  clear: right;
 }
-
-/* line 88, ../scss/app.scss */
+/* line 93, ../scss/app.scss */
 .media-item .slide-toggle {
   padding: 0.25rem 0.5rem;
+}
+
+/* line 99, ../scss/app.scss */
+.queued-media-item {
+  margin-bottom: 1.25rem;
 }
