--- a/snueue/assets/scss/_settings.scss
+++ b/snueue/assets/scss/_settings.scss
@@ -87,7 +87,7 @@ $include-html-global-classes: $include-html-classes;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to define default font stacks
-// $font-family-sans-serif: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+$font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
@@ -757,7 +757,7 @@ $input-box-shadow: inset 0px 0px 2px #bababa;
 // $include-html-keystroke-classes: $include-html-classes;
 
 // We use these to control text styles.
-// $keystroke-font: "Consolas", "Menlo", "Courier", monospace;
+$keystroke-font: "Consolas", "Menlo", "Courier", monospace;
 // $keystroke-font-size: inherit;
 // $keystroke-font-color: $jet;
 // $keystroke-font-color-alt: $white;
