Add subreddit routing shortcut

--- a/snueue/templates/index.html
+++ b/snueue/templates/index.html
@@ -4,4 +4,9 @@
     <div id="main">
     </div>
   </div>
+  <script>
+    {% if source %}
+      snueue.sourceFromURL = '{{ source }}'
+    {% endif %}
+  </script>
 {% endblock %}
