--- a/snueue/templates/layouts/javascripts.html
+++ b/snueue/templates/layouts/javascripts.html
@@ -2,6 +2,7 @@
 <script src="{{ url_for('static', filename='javascripts/vendor/jquery.js') }}"></script>
 <script src="{{ url_for('static', filename='javascripts/vendor/react/react.js') }}"></script>
 <script src="//www.youtube.com/player_api"></script>
+<script src="{{ url_for('static', filename='javascripts/application.js') }}"></script>
 {% if config.DEBUG %}
   <script src="{{ url_for('static', filename='javascripts/vendor/react/JSXTransformer.js') }}"></script>
   <script type="text/jsx" src="{{ url_for('static', filename='jsx/queue.jsx') }}"></script>
