--- a/snueue/assets/scss/app.scss
+++ b/snueue/assets/scss/app.scss
@@ -39,16 +39,20 @@
 //   "foundation/components/offcanvas",
 //   "foundation/components/visibility";
 
+$white: #ffffff;
+$charcoal: #1c1c1f;
+$component-font-size: 1rem;
+
 input[type="text"] {
   box-shadow: none;
   height: 3.0625rem;
   border: solid 1px #fefefe;
-  font-size: 1rem;
+  font-size: $component-font-size;
 }
 
 select {
   border: none;
-  font-size: 1rem;
+  font-size: $component-font-size;
 }
 
 button {
@@ -56,7 +60,7 @@ button {
 }
 
 body {
-  background: #1c1c1f;
+  background: $charcoal;
 }
 
 #main {
@@ -71,7 +75,7 @@ body {
 
 .media-item {
   .media-title {
-    color: #ffffff;
+    color: $white;
   }
 
   .media-expand {
@@ -79,15 +83,23 @@ body {
   }
 
   .fa {
-    color: #ffffff;
+    color: $white;
   }
 
   .media-title {
+    height: 3.3625rem;
     background: $secondary-color;
     padding: 0.68rem 0.7rem;
     margin: 0;
     font-weight: 300;
     clear: right;
+    .permalink {
+      color: $white;
+      font-size: 1.25rem;
+      &:hover {
+        text-decoration: underline;
+      }
+    }
   }
 
   .slide-toggle {
