--- a/snueue/templates/layouts/base.html
+++ b/snueue/templates/layouts/base.html
@@ -1,9 +1,7 @@
 <!doctype html>
 <head>
   <title>Snueue</title>
-  <link rel="stylesheet" href="{{ url_for('static', filename='stylesheets/app.css') }}">
-  <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
+  {% include 'layouts/stylesheets.html' %}
   {% include 'layouts/javascripts.html' %}
 </head>
 <body>
