--- a/snueue/templates/layouts/javascripts.html
+++ b/snueue/templates/layouts/javascripts.html
@@ -1,12 +1,18 @@
-<script src="{{ url_for('static', filename='javascripts/vendor/modernizr.js') }}"></script>
-<script src="{{ url_for('static', filename='javascripts/vendor/jquery.js') }}"></script>
-<script src="{{ url_for('static', filename='javascripts/vendor/react/react.js') }}"></script>
+{% assets filters="rjsmin", output="build/vendor.js",
+  "javascripts/vendor/modernizr.js",
+  "javascripts/vendor/jquery.js",
+  "javascripts/vendor/react/react.js" %}
+  <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+{% endassets %}
 <script src="//www.youtube.com/player_api"></script>
-<script src="{{ url_for('static', filename='javascripts/application.js') }}"></script>
 {% if config.DEBUG %}
+  <script src="{{ url_for('static', filename='javascripts/application.js') }}"></script>
   <script src="{{ url_for('static', filename='javascripts/vendor/react/JSXTransformer.js') }}"></script>
-  <script type="text/jsx" src="{{ url_for('static', filename='jsx/queue.jsx') }}"></script>
+  <script type="text/jsx" src="{{ url_for('static', filename='javascripts/queue.jsx') }}"></script>
 {% else %}
-  <script src="{{ url_for('static', filename='javascripts/queue.js') }}"></script>
+  {% assets filters="rjsmin", output="build/app.js",
+    "javascripts/application.js"
+    "javascripts/queue.js" %}
+    <script type="text/javascript" src="{{ ASSET_URL }}"></script>
+  {% endassets %}
 {% endif %}
-
