--- a/snueue/templates/index.html
+++ b/snueue/templates/index.html
@@ -1,8 +1,9 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
-  <div id="container">
+  <div class="container">
     <div id="main">
     </div>
+    {% include 'layouts/footer.html' %}
   </div>
   <script>
     {% if source %}
