--- a/snueue/assets/stylesheets/_settings.scss
+++ b/snueue/assets/stylesheets/_settings.scss
@@ -96,7 +96,7 @@ $font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial
 // $font-weight-bold: bold !default;
 
 // We use these as default colors throughout
-$primary-color: #ff4500;
+$primary-color: #336699;
 $secondary-color: #303030;
 // $alert-color: #f04124;
 // $success-color: #43AC6A;
@@ -601,7 +601,7 @@ $secondary-color: #303030;
 // We use these to control video container padding and margins
 // $flex-video-padding-top: rem-calc(25);
 // $flex-video-padding-bottom: 67.5%;
-// $flex-video-margin-bottom: rem-calc(16);
+$flex-video-margin-bottom: 0;
 
 // We use this to control widescreen bottom padding
 // $flex-video-widescreen-padding-bottom: 56.34%;
