--- a/snueue/templates/layouts/javascripts.html
+++ b/snueue/templates/layouts/javascripts.html
@@ -1,5 +1,6 @@
 {% assets filters="rjsmin", output="build/vendor.js",
   "javascripts/vendor/modernizr.js",
+  "javascripts/vendor/sticky.js",
   "javascripts/vendor/jquery.js",
   "javascripts/vendor/react/react-with-addons.js" %}
   <script type="text/javascript" src="{{ ASSET_URL }}"></script>
