--- a/snueue/assets/stylesheets/app.scss
+++ b/snueue/assets/stylesheets/app.scss
@@ -45,7 +45,7 @@ $charcoal: #1c1c1f;
 $reddit-blue: #cee3f8;
 $navy-blue: #15304a;
 $satsuki-blue: $primary-color;
-$onyx-grey: $secondary-color;
+$cgp-grey: $secondary-color;
 
 $footer-height: 4rem;
 $footer-margin: 1.5rem;
@@ -126,7 +126,7 @@ button {
 
   .media-title {
     height: 3.3625rem;
-    background: $onyx-grey;
+    background: $cgp-grey;
     padding: 0.68rem 0.7rem;
     margin: 0;
     font-weight: 300;
