That's Snueue with a capital "S"

--- a/snueue/templates/index.html
+++ b/snueue/templates/index.html
@@ -7,7 +7,7 @@
   </div>
   <script>
     {% if source %}
-      snueue.sourceFromURL = '{{ source }}'
+      Snueue.sourceFromURL = '{{ source }}'
     {% endif %}
   </script>
 {% endblock %}
