--- a/snueue/assets/stylesheets/app.scss
+++ b/snueue/assets/stylesheets/app.scss
@@ -49,6 +49,12 @@ button {
   background: $satsuki-blue;
 }
 
+.logo-container {
+  width: 100%;
+  text-align: center;
+  margin: 3rem 0;
+}
+
 .loader {
   width: 15em;
   height: 15em;
