--- a/snueue/templates/index.html
+++ b/snueue/templates/index.html
@@ -3,6 +3,9 @@
   <div class="container">
     <div id="main">
     </div>
+    {% if not source %}
+      {% include 'layouts/initial.html' %}
+    {% endif %}
     {% include 'layouts/footer.html' %}
   </div>
   <script>
