--- a/snueue/templates/layouts/base.html
+++ b/snueue/templates/layouts/base.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <head>
   <title>Snueue</title>
+  <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
   {% include 'layouts/stylesheets.html' %}
   {% include 'layouts/javascripts.html' %}
 </head>
