Add login button

--- a/snueue/assets/stylesheets/_override.scss
+++ b/snueue/assets/stylesheets/_override.scss
@@ -3,7 +3,10 @@ input, select, button {
   border: none;
 }
 
-// Make foundation button transitions faster
 button, .button {
+  // Make foundation button transitions faster
   @include single-transition(background-color, 60ms, linear);
+  // Remove extraneous button padding
+  padding-left: 0;
+  padding-right: 0;
 }
