Add redis and OAuth logins

--- a/snueue/templates/index.html
+++ b/snueue/templates/index.html
@@ -12,5 +12,8 @@
     {% if source %}
       Snueue.sourceFromURL = '{{ source }}'
     {% endif %}
+    {% if current_user.is_authenticated() %}
+      Snueue.user = '{{ current_user.username }}'
+    {% endif %}
   </script>
 {% endblock %}
