--- a/snueue/assets/stylesheets/_settings.scss
+++ b/snueue/assets/stylesheets/_settings.scss
@@ -87,7 +87,8 @@ $include-html-global-classes: $include-html-classes;
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
 // We use these to define default font stacks
-$font-family-sans-serif: "Open Sans", "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
+$font-family-sans-serif: Verdana, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
+
 // $font-family-serif: Georgia, Cambria, "Times New Roman", Times, serif;
 // $font-family-monospace: Consolas, "Liberation Mono", Courier, monospace;
 
