--- a/snueue/assets/stylesheets/app.scss
+++ b/snueue/assets/stylesheets/app.scss
@@ -243,3 +243,10 @@ footer {
   padding-left: 0.2;
   padding-right: 0.2;
 }
+
+/* Browser Specific Styles */
+@-moz-document url-prefix() {
+  select {
+    -moz-appearance: none;
+  }
+}
