--- a/snueue/templates/layouts/stylesheets.html
+++ b/snueue/templates/layouts/stylesheets.html
@@ -1,7 +1,7 @@
 <link href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
 <link href='//fonts.googleapis.com/css?family=Open+Sans:300,400' rel='stylesheet' type='text/css'>
-<link href="{{ url_for('static', filename='stylesheets/vendor/fixedsticky.css') }}" rel="stylesheet">
 {% assets filters="scss", output="build/app.css",
+  "stylesheets/vendor/fixedsticky.css",
   "stylesheets/app.scss" %}
   <link rel="stylesheet" href="{{ ASSET_URL }}">
 {% endassets %}
