--- a/snueue/assets/stylesheets/app.scss
+++ b/snueue/assets/stylesheets/app.scss
@@ -1,5 +1,4 @@
-@import "settings";
-@import "vendor/foundation/foundation";
+@import "vendor/normalize";
 @import "vendor/loader";
 @import "transitions";
 @import "override";
@@ -10,8 +9,10 @@ $charcoal: #1c1c1f;
 $reddit-blue: #b8d6f5;
 $navy-blue: #15304a;
 $border-grey: rgba(0,0,0,0.2);
-$satsuki-blue: $primary-color;
-$cgp-grey: $secondary-color;
+$satsuki-blue: #336699;
+$cgp-grey: #303030;
+
+$font-family-sans-serif: Verdana, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
 $footer-height: 4rem;
 $footer-margin: 1.5rem;
