Add Bourbon Neat

--- a/snueue/assets/stylesheets/app.scss
+++ b/snueue/assets/stylesheets/app.scss
@@ -1,4 +1,6 @@
 @import "vendor/normalize";
+@import "vendor/bourbon/bourbon";
+@import "vendor/neat/neat";
 @import "vendor/loader";
 @import "transitions";
 @import "override";
