--- a/snueue/templates/index.html
+++ b/snueue/templates/index.html
@@ -1,7 +1,7 @@
 {% extends 'layouts/base.html' %}
 {% block body %}
   <div class="container">
-    <div id="main">
+    <div id="main" class="main">
     </div>
     {% if not source %}
       {% include 'layouts/initial.html' %}
