Restyle and convert media player to bourbon

--- a/snueue/assets/stylesheets/_globals.scss
+++ b/snueue/assets/stylesheets/_globals.scss
@@ -1,6 +1,6 @@
 $white: #ffffff;
 $ghost-grey: #fafafa;
-$charcoal: #1c1c1f;
+$charcoal: #111111;
 $reddit-blue: #b8d6f5;
 $navy-blue: #15304a;
 $border-grey: rgba(0,0,0,0.2);
