--- a/snueue/assets/stylesheets/components/_queue.scss
+++ b/snueue/assets/stylesheets/components/_queue.scss
@@ -101,13 +101,6 @@
   @include omega();
 }
 
-.media-title {
-  background: $cgp-grey;
-  font-weight: 300;
-  margin: 0;
-  clear: right;
-}
-
 .media-item {
   @include outer-container;
 
@@ -120,8 +113,9 @@
     color: $white;
   }
   .media-title {
-    height: 3.3625rem;
-    padding: 0.68rem 0.7rem;
+    font-weight: 300;
+    padding: 0;
+    margin-bottom: 1rem;
     .permalink {
       color: $white;
       font-size: 1.25rem;
@@ -139,11 +133,11 @@
 .queued-media-item {
   @include outer-container;
   $media-title-font-size: 0.95rem;
-  border-bottom: solid $charcoal 1px;
+  border-bottom: solid #262626 1px;
+  padding: 0.9rem 0;
 
   .media-title {
     font-size: $media-title-font-size;
-    padding: 0.4rem 0.6rem;
     overflow: hidden;
     white-space: nowrap;
     .permalink {
@@ -180,5 +174,12 @@
   }
   .button:first-child {
     margin-left: 0;
+  }
+}
+
+.media-player {
+  iframe {
+    width: 100%;
+    height: 65vh;
   }
 }
