Convert dropdown to bourbon

--- a/snueue/assets/stylesheets/_globals.scss
+++ b/snueue/assets/stylesheets/_globals.scss
@@ -1,11 +1,13 @@
 $white: #ffffff;
 $ghost-grey: #fafafa;
-$charcoal: #111111;
+$bright-text: #dedfe8;
+$charcoal: #121314;
 $reddit-blue: #b8d6f5;
 $navy-blue: #15304a;
 $border-grey: rgba(0,0,0,0.2);
 $satsuki-blue: #336699;
 $cgp-grey: #303030;
+$faint-grey: #454545;
 
 $font-family-sans-serif: Verdana, "Open Sans", "Helvetica Neue", Helvetica, Arial, sans-serif;
 
