--- a/snueue/assets/stylesheets/_ui.scss
+++ b/snueue/assets/stylesheets/_ui.scss
@@ -53,7 +53,7 @@ button {
 
 .button, button {
   padding: 1.025rem 0.2rem;
-  color: white;
+  color: $white;
   cursor: pointer;
   text-align: center;
 }
