--- a/snueue/assets/stylesheets/_ui.scss
+++ b/snueue/assets/stylesheets/_ui.scss
@@ -47,15 +47,13 @@ select {
   cursor: pointer;
 }
 
-button {
-  background: $satsuki-blue;
-}
-
 .button, button {
+  background: $satsuki-blue;
   padding: 1.025rem 0.2rem;
   color: $white;
   cursor: pointer;
   text-align: center;
+  border-radius: $ui-radius;
 }
 
 .loader {
